# primer_adolc

./: .gitignore  README.md  adolc_installation.md  adolc_minimum_working_example.md  adolc_minimum_working_example_explanation.md
adolc_demos/adolc_minimal_working_example/: CMakeLists.txt
adolc_demos/adolc_minimum_working_example/: CMakeLists.txt
adolc_demos/demo_higher_order/: CMakeLists.txt
adolc_demos/demo_large_problem/: CMakeLists.txt
adolc_demos/demo_mimo_scalar/: CMakeLists.txt
adolc_demos/demo_mimo_vector/: CMakeLists.txt
adolc_demos/demo_miso_scalar/: CMakeLists.txt
adolc_demos/demo_miso_vector/: CMakeLists.txt  main.cpp
adolc_demos/demo_nonsmooth/: CMakeLists.txt  main.cpp
adolc_demos/demo_siso/: main.cpp
adolc_demos/demo_traceless_scalar/: CMakeLists.txt
adolc_demos/demo_traceless_vector/: CMakeLists.txt
docs/: adolc_installation.md  adolc_minimal_working_example.md  adolc_minimal_working_example_explanation.md  adolc_minimum_working_example.md  adolc_minimum_working_example_explanation.md
my_demos/: adolc_demos_readme.md
my_demos/adolc_minimum_working_example/: main.cpp
my_demos/demo_higher_order/: main.cpp
my_demos/demo_large_problem/: main.cpp
my_demos/demo_mimo_scalar/: main.cpp
my_demos/demo_mimo_vector/: main.cpp
my_demos/demo_miso_scalar/: main.cpp
my_demos/demo_simo/: CMakeLists.txt  main.cpp
my_demos/demo_siso/: CMakeLists.txt
my_demos/demo_traceless_scalar/: CMakeLists.txt  main.cpp
my_demos/demo_traceless_vector/: CMakeLists.txt  main.cpp
official_demos/: official_demo_readme.md
official_demos/powerexam/: CMakeLists.txt
official_demos/tapeless_vector/: CMakeLists.txt  tapeless_vector.cpp
(+3 files in other folders)
